<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_new_settings"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_registered_courses"
        android:orderInCategory="200"
        android:title="View Courses"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:orderInCategory="200"
        android:title="@string/help_and_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_more"
        android:orderInCategory="200"
        android:title="@string/more"
        app:showAsAction="never" />
</menu>