<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ub_logo" />

    <TextView
        android:id="@+id/malypo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/platform_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/platform_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/platform_description"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25dp" />

    <Button
        android:id="@+id/tologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="#2980B9"
        android:onClick="gotoLogin"
        android:text="@string/get_started"
        android:textColor="#ffffff" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>