<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#009ACD"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lecturer_text"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="40dp"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"/>


        <EditText
            android:id="@+id/lecturerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:hint="Lecturer matricule"
            android:text="" />

        <EditText
            android:id="@+id/password_real"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:background="@drawable/round_corners"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

        <Button
            android:id="@+id/lecturer_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="20dp"
            android:onClick="lecturerLogin"
            android:layout_gravity="bottom"
            android:background="#80B9"
            android:textColor="#ffffff" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>